# domain_is_active

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  pyproject.toml
docs/: ARCHITECTURE.md  design_notes.md  flowchart.md
docs/memorybank/: decisionLog.md  projectState.md  roadmap.md
migrations/: env.py
migrations/versions/: a7da2453376d_initial_active_domain_scan_tables.py
scripts/: import_excel_to_db.py
src/core/: __init__.py
src/core/db/: __init__.py  base.py  database.py
src/domain_is_active/: checker.py  hunter.py  main.py  models.py  repository.py
src/domain_is_active/checker/: __init__.py  domain_checker.py
src/domain_is_active/collectors/: dns_col.py  http_col.py  ssl_col.py  visual_col.py  whois_col.py
src/domain_is_active/constants/: __init__.py  defaults.py  enums.py
src/domain_is_active/engine/: __init__.py  risk_engine.py
src/domain_is_active/exporters/: excel.py
src/domain_is_active/hunting/: __init__.py  similarity.py  urlscan_hunter.py
tests/: test_db.py  test_input.txt
