[project]
name = "domain-is-active"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dnspython>=2.8.0",
    "mmh3>=5.2.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "python-whois>=0.9.6",
    "requests>=2.34.2",
]
