[project]
name = "domain-is-active"
version = "0.1.0"
description = "Phishing Active & Correlation Tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.13.0",
    "cryptography>=49.0.0",
    "dnspython>=2.8.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "python-whois>=0.9.6",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.0",
]

[project.scripts]
dia = "domain_is_active.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
